Fix jumping checkbox focus ring
Bug: 361008594
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5806965
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit a19693425bac32d9ff56d1cb5f395ab6009c4e4a)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5802950

--- a/front_end/panels/sources/components/breakpointsView.css
+++ b/front_end/panels/sources/components/breakpointsView.css
@@ -211,7 +211,7 @@ devtools-icon[name="file-script"] {
   }
 }
 
-.group-checkbox {
+input.group-checkbox {
   margin: 0;
   display: none;
 }
