--- a/front_end/ui/components/input/checkbox.css
+++ b/front_end/ui/components/input/checkbox.css
@@ -10,6 +10,10 @@ input[type="checkbox"] {
   accent-color: var(--sys-color-primary-bright);
   color: var(--sys-color-on-primary);
   position: relative;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover::after,
   &:active::before {
@@ -18,8 +22,6 @@ input[type="checkbox"] {
     width: 24px;
     border-radius: var(--sys-shape-corner-full);
     position: absolute;
-    top: -6px;
-    left: -6px;
   }
 
   &:not(:disabled):hover::after {
@@ -30,28 +32,19 @@ input[type="checkbox"] {
     background-color: var(--sys-color-state-ripple-neutral-on-subtle);
   }
 
-  &:not(:disabled):focus-visible {
-    outline: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &::before {
-      content: "";
-      height: 15px;
-      width: 15px;
-      border-radius: 5px;
-      position: absolute;
-      border: 2px solid var(--sys-color-state-focus-ring);
-    }
+  &:not(:disabled):focus-visible::before {
+    content: "";
+    height: 15px;
+    width: 15px;
+    border-radius: 5px;
+    position: absolute;
+    border: 2px solid var(--sys-color-state-focus-ring);
   }
 
   &.small:hover::after,
   &.small:active::before {
     height: 12px;
     width: 12px;
-    top: 0;
-    left: 0;
     border-radius: 2px;
   }
 }
